@@ -1,15 +1,24 @@
 {
-  "timestamp" : "2024-01-23T00:29:03Z",
+  "timestamp" : "2024-01-26T00:26:53Z",
   "count_outdated" : 380,
   "uniques_outdated" : 100,
-  "count" : 382,
-  "uniques" : 101,
+  "count" : 410,
+  "uniques" : 102,
   "views" : [
     {
       "timestamp": "2024-01-22T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-25T00:00:00Z",
+      "count": 28,
+      "count_minmax": [ 28, 28 ],
+      "count_decinc": [ 0, 28 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
