@@ -1,10 +1,15 @@
 {
-  "count": 2,
-  "uniques": 1,
+  "count": 30,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2024-01-22T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-25T00:00:00Z",
+      "count": 28,
       "uniques": 1
     }
   ]
